Refactor timelines into separate sequence module